--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/marked": "^4.0.8",
     "@types/showdown": "^2.0.0",
     "dompurify": "^3.0.1",
+    "firebase": "^9.19.1",
     "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-split": "^2.0.14",
     "showdown": "^2.1.0"
   },
